Fixed border color in dark mode.

--- a/j-AutoComplete/component.css
+++ b/j-AutoComplete/component.css
@@ -8,6 +8,6 @@
 .ui-autocomplete li span:first-child { float: left; width: 65%; }
 .ui-autocomplete li span:last-child { float: right; width: 30%; font-size: 11px; color: #A0A0A0; }
 
-.ui-dark .ui-autocomplete { background-color: #303030; }
+.ui-dark .ui-autocomplete { background-color: #303030; border-color: #404040; }
 .ui-dark .ui-autocomplete li { color: gray; border-bottom-color: #404040; }
 .ui-dark .ui-autocomplete .selected { background-color: #454545; color: white; }
